# isl

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  ast_debug.c  basis_reduction_tab.c  basis_reduction_templ.c  bound.c  fix_includes.sh  gitversion.h  hs.c  hs.in  hs_manual.c  isl_aff.c  isl_aff_map.c  isl_aff_private.h  isl_affine_hull.c  isl_arg.c  isl_ast.c  isl_ast_build.c  isl_ast_build_expr.c  isl_ast_codegen.c  isl_ast_graft.c  isl_ast_graft_private.h  isl_ast_private.h  isl_basis_reduction.h  isl_bazel_include_fixes.patch  isl_bernstein.c  isl_bernstein.h  isl_blk.c  isl_blk.h  isl_bound.c  isl_box.c  isl_coalesce.c  isl_config.h  isl_constraint.c  isl_constraint_private.h  isl_convex_hull.c  (+162 more)
.github/workflows/: bazel.yml
include/isl/: stdint.h
patches/: 01_angle_includes.patch
